<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.UI.RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        tools:context=".UI.UI.RegisterActivity">

        <ImageView
            android:id="@+id/ivlogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_description"
            app:srcCompat="@drawable/logo_tienda_login" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="15dp"
            android:padding="5dp"
            android:hint="@string/nombre_completo"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="15dp"
            android:padding="5dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:hint="@string/correo_electronico" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="15dp"
            android:padding="5dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/contrasenia" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="15dp"
            android:padding="5dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/confirmar_contrasenia" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@color/blue_dark"
            android:text="@string/registrarse" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_already_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ya_tienes_cuenta" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:padding="6dp"
                android:layout_weight="1"
                android:text="@string/iniciar_sesion"
                android:textColor="@android:color/holo_blue_light"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>