<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:elevation="4dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:clipToPadding="false"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="40dp"
        android:shape="rectangle"
        android:radius="12dp"
        android:background="#FFF9C4">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/icono_de_pago_pendiente"
            android:src="@drawable/ic_pending"
            app:tint="#FBC02D" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pago_pendiente"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonBackToHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver_al_inicio"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue_primary"
        android:textColor="@android:color/white"/>
</LinearLayout>